--- a/lab1/index.html
+++ b/lab1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Laboratory Work 1" />
     <meta name="keywords" content="HTML5, CSS, JavaScript" />
-    <title>Романюк Д. П. ІС-34</title>
+    <title>Романюк Д. П. ІС-34 Лаб. 1</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
