--- a/index.html
+++ b/index.html
@@ -8,43 +8,29 @@
     <title>Романюк Д. П. ІС-34</title>
   </head>
   <body>
-    <a href="lab1/index.html"><button>Лабораторна робота №1</button></a><br />
+    <h2>
+      Лабораторні роботи з дисципліни "Основи Front-End технологій" студентки
+      групи ІС-34 Романюк Діани
+    </h2>
+    <a href="lab1/index.html">Лабораторна робота №1</a><br />
   </body>
   <style>
     body {
       font-family: "Alkalami", sans-serif;
+      background-color: #f9eaf7;
     }
 
-    button {
-      width: 150px;
-      height: 48px;
-      background-color: #5c2457;
-      border-radius: 24px;
-      color: #f5f1e8;
-      border-style: none;
-      box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px -1px,
-        rgba(0, 0, 0, 0.14) 0 6px 10px 0, rgba(0, 0, 0, 0.12) 0 1px 18px 0;
-      box-sizing: border-box;
-      cursor: pointer;
-      transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1),
-        opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-      font-weight: 600;
-      margin: 20px;
+    a {
+      color: rgb(70, 32, 59);
+      font-size: 24px;
     }
 
-    button:hover {
-      background: #5c2457d0;
+    a:hover {
+      color: rgb(129, 70, 112);
     }
 
-    button:active {
-      box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%),
-        0 8px 12px 6px rgb(60 64 67 / 15%);
-      outline: none;
-    }
-
-    h2 {
-      margin-bottom: 0px;
-      margin-left: 20px;
+    a:active {
+      color: rgb(122, 6, 89);
     }
   </style>
 </html>
