--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       групи ІС-34 Романюк Діани
     </h2>
     <a href="lab1/index.html">Лабораторна робота №1</a><br />
+    <a href="lab2/index.html">Лабораторна робота №2</a><br />
   </body>
   <style>
     body {
