--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </h2>
     <a href="lab1/index.html">Лабораторна робота №1</a><br />
     <a href="lab2/index.html">Лабораторна робота №2</a><br />
+    <a href="lab3/index.html">Лабораторна робота №3</a><br />
   </body>
   <style>
     body {
