--- a/lab1/index.html
+++ b/lab1/index.html
@@ -21,10 +21,10 @@
       <li>Музика</li>
       <li>Читання</li>
       <li>Малювання</li>
-      <li>Спорт</li>
+      <li id="first">Спорт</li>
     </ul>
 
-    Улюблені фільми та книги:
+    <p id="second">Улюблені фільми та книги:</p>
     <ol>
       <li>Спілка мертвих поетів (фільм)</li>
       <li>Інтерстеллар (фільм)</li>
@@ -45,9 +45,13 @@
 
     <a href="https://www.krakow.pl/"
       ><img
+        class="picture"
         src="kono-miasto-krolow.-krakow.jpg"
         alt="Krakow"
-        style="height: 350px; width: auto"
+        style="height: 350px; width: auto; margin: 20px"
     /></a>
+
+    <br />
+    <script src="script.js"></script>
   </body>
 </html>
