Add lab 6 to the main page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="lab1/index.html">Лабораторна робота №4</a><br />
     <a href="lab5-1/index.html">Лабораторна робота №5 (Завдання 1)</a><br />
     <a href="lab5-2/index.html">Лабораторна робота №5 (Завдання 2)</a><br />
+    <a href="lab6/index.html">Лабораторна робота №6</a><br />
   </body>
   <style>
     body {
