--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <a href="lab1/index.html">Лабораторна робота №1</a><br />
     <a href="lab2/index.html">Лабораторна робота №2</a><br />
     <a href="lab3/index.html">Лабораторна робота №3</a><br />
-    <a href="lab1/index.html">Лабораторна робота №4</a><br />
+    <a href="lab4/index.html">Лабораторна робота №4</a><br />
     <a href="lab5-1/index.html">Лабораторна робота №5 (Завдання 1)</a><br />
     <a href="lab5-2/index.html">Лабораторна робота №5 (Завдання 2)</a><br />
     <a href="lab6/index.html">Лабораторна робота №6</a><br />
+    <a href="https://fireflyy13.github.io/FrontEnd_Labs/my-app/"
+      >Лабораторна робота №7 (Завдання 1)</a
+    ><br />
   </body>
   <style>
     body {
