--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="lab5-1/index.html">Лабораторна робота №5 (Завдання 1)</a><br />
     <a href="lab5-2/index.html">Лабораторна робота №5 (Завдання 2)</a><br />
     <a href="lab6/index.html">Лабораторна робота №6</a><br />
+    <a href="lab8/index.html">Лабораторна робота №8</a><br />
   </body>
   <style>
     body {
