Add links to buttons

--- a/lab8/index.html
+++ b/lab8/index.html
@@ -60,13 +60,17 @@
       </div>
       <div class="box">
         <div class="socials">
-          <button>
-            <i class="fa fa-facebook" aria-hidden="true"></i>
-          </button>
-          <button><i class="fa fa-twitter" aria-hidden="true"></i></button>
-          <button>
-            <i class="fa fa-linkedin" aria-hidden="true"></i>
-          </button>
+          <a href="https://www.facebook.com/"
+            ><button>
+              <i class="fa fa-facebook" aria-hidden="true"></i></button
+          ></a>
+          <a href="https://x.com/"
+            ><button><i class="fa fa-twitter" aria-hidden="true"></i></button
+          ></a>
+          <a href="https://www.linkedin.com/">
+            <button>
+              <i class="fa fa-linkedin" aria-hidden="true"></i></button
+          ></a>
         </div>
       </div>
     </header>
@@ -467,7 +471,7 @@
           }, 400);
         }
       }
-      
+
       function moveLeft() {
         index -= group;
         update();
